fixed word-wrap bug

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,3 +1,7 @@
+div {
+  word-break: break-all;
+  word-wrap: break-word;
+}
 ul#topo-map {
   list-style: none;
   background: url(/assets/uwharrie-topo-highlights.png) no-repeat 0 0;
